2013-12-05  Hirochika Asai  <asai@scyphus.co.jp>

    * las/las.h: Added the definitions of operand size
    * las/arch/x86_64/eval.h: Added the definitions of operand size
    * las/arch/x86_64/reg.c: Changed to use the SIZE constants

    * las/arch/x86_64/main.c: Implemented ADD instruction

    * las/arch/x86_64/main.c: Implemented AND instruction



2013-12-04  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.h: Fixed the definition of op_reg enum

    * las/arch/x86_64/main.c: Implemented ModR/M and SIB encoder
    * las/arch/x86_64/eval.h: Implemented ModR/M and SIB encoder

    * las/arch/x86_64/main.c: Implemented OI and MI operand encoder and MOV
                              instruction

    * las/tokenizer.c: Added byte, word, dword, and qword keywords
    * las/token.h: Added byte, word, dword, and qword keywords
    * las/parser.c: Added byte, word, dword, and qword keywords
    * las/las.h: Added byte, word, dword, and qword keywords
    * las/instr.c: Added byte, word, dword, and qword keywords
    * las/arch/x86_64/eval.c: Added byte, word, dword, and qword keywords
    * las/arch/x86_64/main.c: Added byte, word, dword, and qword keywords


2013-12-03  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Added EIP and RIP registers
    * las/arch/x86_64/reg.h: Added EIP and RIP registers


2013-11-29  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/eval.c: Implemented the address operand evaluator
    * las/arch/x86_64/eval.h: Implemented the address operand evaluator
    * las/arch/x86_64/main.c: Added a print statement for unknown instruction

    * las/arch/x86_64/main.c: Implemented the POPCNT instruction


2013-11-28  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/eval.c: Implemented operand evaluator for register and
                              immediate operands
    * las/arch/x86_64/eval.h: Implemented operand evaluator for register and
                              immediate operands